title-middle/k8s/istio/title-middle-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: title-middle-route
spec:
  hosts:
  - title-middle
  http:
  - route:
    - destination:
        host: title-middle
        subset: 0.1.0
      weight: 50
    - destination:
        host: title-middle
        subset: 0.2.0
      weight: 50
